--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
+#bancodedados
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost/transacao?createDatabaseIfNotExist = true}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:root}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true    
 
+## PROPRIEDADES DO KAFKA ##
+# Endereço do Kafka
+spring.kafka.bootstrap-servers=${KAFKA_HOST:localhost:9092}
+
+spring.kafka.topic.transactions= transacoes
+
+## PROPRIEDADES DO CONSUMIDOR ##
+# Formato da chave (String) recebida!
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+# Formato da mensagem \ evento (JSON) recebida(o)!
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+
+# Identificador do grupo de consumo
+spring.kafka.consumer.group-id=${KAFKA_CONSUMER_GROUP_ID:minha-aplicacao}
+
+# Modelo de coleta do consumidor (latest, earliest, none)
+spring.kafka.consumer.auto-offset-reset=${KAFKA_AUTO-OFFSET-RESET:latest}
